--- a/templates/schedule.html
+++ b/templates/schedule.html
@@ -38,7 +38,7 @@
           <b>Goal for the day:</b>
         </td>
         <td>
-          { if day.goal %}
+          {% if day.goal %}
             {{ day.goal }}
           {% endif %}
         </td>
