update display of goal of day

--- a/templates/schedule.html
+++ b/templates/schedule.html
@@ -35,7 +35,9 @@
       </tr>
       <tr>
         <td>
-          <b>Goal for the day:</b>
+          {% if day.goal %}
+            <b>Goal for the day:</b>
+          {% endif %}
         </td>
         <td>
           {% if day.goal %}
