--- a/templates/schedule.html
+++ b/templates/schedule.html
@@ -45,20 +45,22 @@
           {% endif %}
         </td>
       </tr>
-      {% for loc in day.locations %}
-        <tr>
-          <td class="uk-width-2-5">
-            {{ loc.location }}
-          </td>
-          <td class="uk-width-3-5">
-            {% if loc.url %}
-              <a href="{{ loc.url }}" target="_blank">{{ loc.room }}</a>
-            {% else %}
-              {{ loc.room }}
-            {% endif %}
-          </td>
-        </tr>
-      {% endfor %}
+      {% if day.locations %}
+        {% for loc in day.locations %}
+          <tr>
+            <td class="uk-width-2-5">
+              {{ loc.location }}
+            </td>
+            <td class="uk-width-3-5">
+              {% if loc.url %}
+                <a href="{{ loc.url }}" target="_blank">{{ loc.room }}</a>
+              {% else %}
+                {{ loc.room }}
+              {% endif %}
+            </td>
+          </tr>
+        {% endfor %}
+      {% endif %}
       {% for session in day.sessions %}
         <tr>
           <td class="uk-width-2-5">
